--- a/Week3.ipynb
+++ b/Week3.ipynb
@@ -744,11 +744,11 @@
    },
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'X3WXC2T0I2QRSGMOD0P52BG3NEDH34COGY5GGHZY1N5C53UH'\n",
-    "CLIENT_SECRET = 'VP0Y0G3EUSKJRET1IOBTVRQBXEH1OIGTJSTDPXY21GASDWA0'\n",
+    "CLIENT_ID = 'your-client-id' # Replace Foursqaure id here\n",
+    "CLIENT_SECRET = 'your-client-secret' # Replace Foursqaure secret id here\n",
     "VERSION = '20180605'\n",
-    "radius = 500\n",
-    "LIMIT = 100"
+    "radius = 500 # 500m radius around each point\n",
+    "LIMIT = 100  # 100 venues returned "
    ]
   },
   {
